# Auto-GPS

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
src/autogps/: __init__.py  __main__.py
src/autogps/core/: config.py  gps_trajectory.py
src/autogps/parsers/: collision_parser.py
src/autogps/processors/: mcap_reader.py  segment_extractor.py
src/autogps/utils/: ffmpeg_utils.py  geo_utils.py  logger.py
